--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+#div1{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:200px;
+	width:500px;
+	border:5px solid black;
+	border-radius:50px;
+	background-color:lightgray;
+}
+#box1{
+	width:100px;
+	height:100px;
+	background-color:green;
+	border-radius:50%;
+	margin:10px;
+}
+#box2{
+	width:100px;
+	height:100px;
+	background-color:yellow;
+	border-radius:50%;
+	margin:10px;
+}
+#box3{
+	width:100px;
+	height:100px;
+	background-color:red;
+	border-radius:50%;
+	margin:10px;
+}
