--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-#div1{
+.container{
 	display:flex;
 	justify-content:center;
 	align-items:center;
@@ -9,21 +9,21 @@
 	border-radius:50px;
 	background-color:lightgray;
 }
-#box1{
+.red{
 	width:100px;
 	height:100px;
 	background-color:red;
 	border-radius:50%;
 	margin:10px;
 }
-#box2{
+.green{
 	width:100px;
 	height:100px;
 	background-color:green;
 	border-radius:50%;
 	margin:10px;
 }
-#box3{
+.yellow{
 	width:100px;
 	height:100px;
 	background-color:yellow;
